# bone

./: .gitignore
src/: CMakeLists.txt  reciver.hpp  server.cpp  server.hpp  socket_reciver.cpp  socket_reciver.hpp
src/test/: CMakeLists.txt  server_init_status_test.cpp  server_start_status_test.cpp  socket_reciver_validation_test.cpp  start_status_test.cpp
